--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=vavulenceapp.db"
-  }
+  },
+  "TokenKey": "hjDntqCyjRwD2va67KLIV2Za6YDfahdU"
 }
